--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "wrangler build",
     "dev": "wrangler dev",
-    "deploy": "wrangler publish && sleep 3 && curl https://semantle.toggly.workers.dev/setup"
+    "deploy": "wrangler publish && sleep 3 && curl https://demantle-discord.toggly.workers.dev/setup"
   },
   "author": {
     "name": "Greg Brimble",
@@ -14,7 +14,6 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^2.2.2",
-    "@cloudflare/wrangler": "1.13.0",
     "@types/lodash": "^4.14.180",
     "@types/node": "14.14.21",
     "cross-fetch": "3.0.6",
